--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         <!-- DESKTOP NAV Y NGUYÊN -->
         <nav class="nav">
             <a href="#" class="nav-link">HOME</a>
-            <a href="#" class="nav-link">ABOUT</a>
+            <a href="#" class="about.html">ABOUT</a>
             <a href="#" class="nav-link">PHOTOS</a>
             <a href="#" class="nav-link">VIDEOS</a>
             <a href="#" class="nav-link">SERVICE</a>
